# peria_paint

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  imgui.ini  main.cpp
assets/shaders/: circle.frag  circle.vert  circle_batcher.frag  circle_batcher.vert  default.frag  default.vert  eraser.frag  line.frag  line.vert  line_v2.frag  line_v2.vert  quad.frag  quad.vert  quad_colored.frag  quad_colored.vert
src/: app.cpp  app.hpp  input_manager.cpp  input_manager.hpp  timing_utility.cpp  timing_utility.hpp
src/graphics/: color.hpp  gl_entities.cpp  gl_entities.hpp  gl_errors.hpp  graphics.cpp  graphics.hpp  shader.cpp  shader.hpp
src/math/: camera2d.cpp  camera2d.hpp  matrix.cpp  matrix.hpp  vec.hpp
